--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=7.1",
         "mashape/unirest-php": "^3.0",
         "kassner/log-parser": "^1.5",
-        "nesbot/carbon": "^1.25",
+        "nesbot/carbon": "^1.25|^2.16",
         "tightenco/collect": "^5.6"
     },
     "require-dev": {
